--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -27,9 +27,11 @@ jobs:
     - name: BlackDuck Scan
       uses: blackducksoftware/github-action@v2
       with:
-        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.project.version.name=2 --detect.polaris.enabled=true
-    #- name: Run Polaris tests
-     # uses: prernagarg05/polaris-action@v2
+        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.project.version.name=2
+    - name: Run Polaris tests
+      uses: prernagarg05/polaris-action@v2
+      with:
+        args: --detect.polaris.enabled=true
     
     
     #- run: ls 
