--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Run Polaris tests
       uses: prernagarg05/polaris-action@v2
       with:
-        args: --detect.polaris.enabled=true
+        args: --detect.polaris.enabled=true --polaris.access.token=${{ secrets.POLARIS_ACCESS_TOKEN }} --polaris.url=${{ secrets.POLARIS_SERVER_URL }}
     
     
     #- run: ls 
