--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -20,7 +20,5 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
     - name: Install Vantage
-    - run: wget https://github.com/whitehatsec/vantage-prevent-distributions/releases/latest/download/VantagePrevent-Ubuntu-22_04.deb
-    - run: ls
+      run: wget https://github.com/whitehatsec/vantage-prevent-distributions/releases/latest/download/VantagePrevent-Ubuntu-22_04.deb
