--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -20,5 +20,13 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - name: Upload build artifacts       
+      uses: actions/upload-artifact@v2      
+      with:        
+          name: insecure-bank1.war        
+          path: target/insecure-bank1.war
     - name: Install Vantage
       run: wget https://github.com/whitehatsec/vantage-prevent-distributions/releases/latest/download/VantagePrevent-Ubuntu-22_04.deb
+    - name: Vantage location
+      run: ls
