--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -29,4 +29,11 @@ jobs:
     - name: Install Vantage
       run: wget https://github.com/whitehatsec/vantage-prevent-distributions/releases/latest/download/VantagePrevent-Ubuntu-22_04.deb
     - name: Vantage location
-      run: pwd
+      run: ls
+      
+    - name: Install Vantage
+    - run: sudo apt-get install -y -f [./VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
+    
+    - name: Vantage installed location
+      run: ls
+      
