--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -32,8 +32,8 @@ jobs:
       run: ls
       
     - name: Install Vantage
-    - run: sudo apt-get install -y -f [./VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
+      run: sudo apt-get install -y -f [./VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
     
     - name: Vantage installed location
-    - run: ls
+      run: ls
       
