--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -31,9 +31,14 @@ jobs:
     - name: Vantage location
       run: ls
       
+    - name: Current location
+      run: pwd
+      
     - name: Install Vantage
-      run: sudo apt-get install -y -f [./VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
+      run: sudo apt-get install -y -f [VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
     
     - name: Vantage installed location
       run: ls
+    - name: Current location
+      run: pwd
       
