--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -18,14 +18,14 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+#     - name: Build with Maven
+#       run: mvn -B package --file pom.xml
       
-    - name: Upload build artifacts       
-      uses: actions/upload-artifact@v2      
-      with:        
-          name: insecure-bank.war        
-          path: target/insecure-bank.war
+#     - name: Upload build artifacts       
+#       uses: actions/upload-artifact@v2      
+#       with:        
+#           name: insecure-bank.war        
+#           path: target/insecure-bank.war
     - name: Install Vantage
       run: wget https://github.com/whitehatsec/vantage-prevent-distributions/releases/latest/download/VantagePrevent-Ubuntu-22_04.deb
     - name: Vantage location
@@ -35,8 +35,10 @@ jobs:
       run: pwd
       
     - name: Install Vantage
-      run: sudo apt-get install -y -f [/home/runner/work/insecure-bank/insecure-bank/VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
-    
+      #run: sudo apt-get install -y -f [/home/runner/work/insecure-bank/insecure-bank/VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
+      run: sudo dpkg -i VantagePrevent-Ubuntu-22_04.deb
+    - name: install
+      run: sudo apt-get install -y -f VantagePrevent-Ubuntu-22_04.deb
     - name: Vantage installed location
       run: ls
     - name: Current location
