--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Current location
       run: pwd
       
-    - name: Install Vantage
+   # - name: Install Vantage
       #run: sudo apt-get install -y -f [/home/runner/work/insecure-bank/insecure-bank/VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
       
     - name: install
