--- a/.github/workflows/vantage.yml
+++ b/.github/workflows/vantage.yml
@@ -32,13 +32,13 @@ jobs:
       run: ls
       
     - name: Current location
-      run: pwd
+      run: cd /home/runner/work/insecure-bank/insecure-bank/
       
    # - name: Install Vantage
       #run: sudo apt-get install -y -f [/home/runner/work/insecure-bank/insecure-bank/VantagePrevent-Ubuntu-22_04.deb | /home/runner/work/insecure-bank/insecure-bank]
       
     - name: install
-      run: sudo apt-get install -y -f VantagePrevent-Ubuntu-22_04.deb
+      run: sudo apt-get install VantagePrevent-Ubuntu-22_04.deb
     - name: Vantage installed location
       run: ls
     - name: Current location
