--- a/.github/workflows/vantage_dast.yml
+++ b/.github/workflows/vantage_dast.yml
@@ -10,6 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+#     - name: Build with Maven
+#       run: mvn -B package --file pom.xml
+      
+#     - name: Upload build artifacts       
+#       uses: actions/upload-artifact@v2      
+#       with:        
+#           name: insecure-bank.war        
+#           path: target/insecure-bank.war
 
       - name: create container
         run: docker build . --file Dockerfile -t whs:insecure-bank
