--- a/.github/workflows/vantage_dast.yml
+++ b/.github/workflows/vantage_dast.yml
@@ -15,14 +15,14 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-#     - name: Build with Maven
-#       run: mvn -B package --file pom.xml
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
       
-#     - name: Upload build artifacts       
-#       uses: actions/upload-artifact@v2      
-#       with:        
-#           name: insecure-bank.war        
-#           path: target/insecure-bank.war
+      - name: Upload build artifacts       
+        uses: actions/upload-artifact@v2      
+        with:        
+           name: insecure-bank.war        
+           path: target/insecure-bank.war
 
       - name: create container
         run: docker build . --file Dockerfile -t whs:insecure-bank
