--- a/.github/workflows/vantage_dast.yml
+++ b/.github/workflows/vantage_dast.yml
@@ -25,13 +25,13 @@ jobs:
            path: target/insecure-bank.war
            
       - name: Check1
-        run: ls /target
+        run: ls target
 
       - name: create container
         run: docker build . --file Dockerfile -t whs:insecure-bank
         
       - name: Check2
-        run: ls /target
+        run: ls
         
       - name: start insecure bank 
         run: |
