--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-          DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
+          #DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
           BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
           BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
           detect-version: "7.13.2"
