Update and rename polaris-scan.yml1 to polaris-scan.yml

--- a/.github/workflows/polaris-scan.yml
+++ b/.github/workflows/polaris-scan.yml
@@ -18,7 +18,13 @@ jobs:
           server_url: ${{ secrets.POLARIS_SERVER_URL }} # (Required)
           access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }} # (Required)
           
-          total_issues: 0 # (Not required)
-          new_issues: 0 # (Not required)
-          cli_scan_json_file: .synopsys/polaris/cli-scan.json # (Not required)
-          command_opts: '' # (Not required)
+          #total_issues: 0 # (Not required)
+          #new_issues: 0 # (Not required)
+          #cli_scan_json_file: .synopsys/polaris/cli-scan.json # (Not required)
+          #command_opts: '' # (Not required)
+      - run: ls 
+      - name: Upload Results
+        uses: actions/upload-artifact@v2
+        with:
+          name: Polaris
+          path: /home/runner/work/insecure-bank/insecure-bank/
