--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -14,8 +14,7 @@ jobs:
           BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
           BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
           detect-version: "7.13.2"
-          server_url: ${{ secrets.POLARIS_SERVER_URL }} # (Required)
-          access_token: ${{ secrets.POLARIS_ACCESS_TOKEN }} # (Required)
+          
           
     steps:
     - uses: actions/checkout@v3
@@ -28,7 +27,7 @@ jobs:
     - name: BlackDuck Scan
       uses: blackducksoftware/github-action@v2
       with:
-        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.project.version.name=VERSION-NAME
+        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.project.version.name=VERSION-NAME --detect.blackduck.signature.scanner.dry.run=false
         
     - run: ls 
     - name: Upload Results
