--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -27,7 +27,7 @@ jobs:
     - name: BlackDuck Scan
       uses: blackducksoftware/github-action@v2
       with:
-        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.project.version.name=VERSION-NAME --detect.blackduck.signature.scanner.dry.run=false
+        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.project.version.name=3
         
     - run: ls 
     - name: Upload Results
