--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
           #DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
-          BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
-          BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
+          #BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
+          #BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
           detect-version: "7.13.2"
           
           
@@ -25,7 +25,7 @@ jobs:
         distribution: 'adopt'
         
     - name: BlackDuck Scan
-      uses: synopsys-sig/detect-action@v0.3.0
+      uses: blackducksoftware/github-action@v2
       with:
         args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.default.project.version.scheme=timestamp
         #--detect.project.version.name=3
