--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -13,6 +13,8 @@ jobs:
           #DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
           #BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
           #BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
+          BLACKDUCK_URL: "${{ secrets.BLACKDUCKURL }}"
+          BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCKAPITOKEN }}
           detect-version: "7.13.2"
           
           
