--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -13,8 +13,8 @@ jobs:
           #DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
           #BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
           #BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
-          BLACKDUCK_URL: "${{ secrets.BLACKDUCKURL }}"
-          BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCKAPITOKEN }}
+          #BLACKDUCK_URL: "${{ secrets.BLACKDUCKURL }}"
+          #BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCKAPITOKEN }}
           detect-version: "7.13.2"
           
           
@@ -29,7 +29,7 @@ jobs:
     - name: BlackDuck Scan
       uses: blackducksoftware/github-action@v2
       with:
-        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.default.project.version.scheme=timestamp
+        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true ----blackduck.url=${{ secrets.BLACKDUCKURL }} --blackduck.api.token=${{ secrets.BLACKDUCKAPITOKEN }} --detect.default.project.version.scheme=timestamp
         #--detect.project.version.name=3
         
     - run: ls 
