--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -15,7 +15,7 @@ jobs:
           #BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
           #BLACKDUCK_URL: "${{ secrets.BLACKDUCKURL }}"
           #BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCKAPITOKEN }}
-          detect-version: "7.13.2"
+          #detect-version: "7.13.2"
           
           
     steps:
@@ -29,7 +29,8 @@ jobs:
     - name: BlackDuck Scan
       uses: blackducksoftware/github-action@v2
       with:
-        args: --detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --blackduck.url=${{ secrets.BLACKDUCKURL }} --blackduck.api.token=${{ secrets.BLACKDUCKAPITOKEN }} --detect.default.project.version.scheme=timestamp
+        args: --blackduck.url=${{ secrets.BLACKDUCKURL }} --blackduck.api.token=${{ secrets.BLACKDUCKAPITOKEN }}
+        #--detect.project.name=Pipeline_test --detect.tools.excluded="DETECTOR" --blackduck.trust.cert=true --detect.risk.report.pdf=true --detect.default.project.version.scheme=timestamp
         #--detect.project.version.name=3
         
     - run: ls 
