--- a/.github/workflows/blackduck.yml
+++ b/.github/workflows/blackduck.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
+    #env:
           #DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
           #BLACKDUCK_URL: "${{ secrets.BLACKDUCK_URL }}"
           #BLACKDUCK_API_TOKEN: ${{ secrets.BLACKDUCK_API_TOKEN }}
